tests/negative/symbols/use_undef.orng
// use_undef.orng:8:3: error: symbol `x` is never defined
// fn main() -> Int {
//  ^
// use_undef.orng:9:10: note: declared here
//     let x: Int = undefined
//         ^
// 
fn main() -> Int {
    let x: Int = undefined
    x
}